--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </div>
   <hr>
   <div class='footer'>
-  <a href='https://github.com/unwriter/readcash/blob/master/README.md'>How it works</a> - <a href='https://github.com/unwriter/readcash/issues'>Feature Requests</a> - <a href='https://twitter.com/_unwriter'>Contact</a> - <a href='https://discord.gg/JAcweQQ'>Chat</a>
+  <a href='https://github.com/22centurymotorcompany/readcash/blob/gh-pages/README.md'>How it works</a> - <a href='https://github.com/unwriter/readcash/issues'>Feature Requests</a>
   </div>
 </body>
 </html>
