--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <!-- meta -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@_unwriter" />
-  <meta name="twitter:title" content="read.cash" />
+  <meta name="twitter:title" content="read.bch.sx" />
   <meta name="twitter:description" content="Manage multiple wallets from various Bitcoin applications, in one place, with zero risk." />
-  <meta name="twitter:image" content="https://read.cash/screenshot.png" />
-  <meta property="og:url" content="https://read.cash" />
+  <meta name="twitter:image" content="https://read.bch.sx/screenshot.png" />
+  <meta property="og:url" content="https://read.bch.sx" />
   <meta property="og:type"   content="website" />
-  <meta property="og:title" content="read.cash" />
+  <meta property="og:title" content="read.bch.sx" />
   <meta property="og:description" content="Manage multiple wallets from various Bitcoin applications, in one place, with zero risk." />
-  <meta property="og:image" content="https://read.cash/screenshot.png" />
+  <meta property="og:image" content="https://read.bch.sx/screenshot.png" />
 
   <!-- vendor -->
   <link href="./vendor/bootstrap.css" rel="stylesheet">
@@ -57,14 +57,14 @@
         <pre>
           There is no special API. Simply link to:
 
-          https://read.cash/add#[WALLET ADDRESS]
+          https://read.bch.sx/add#[WALLET ADDRESS]
 
           When a user visits the link, the address will be automatically added.
         </pre>
         <div class='text-right'>
           <div>Example</div>
 
-          <a href="./add#qq4kp3w3yhhvy4gm4jgeza4vus8vpxgrwc90n8rhxe">https://read.cash/add#qq4kp3w3yhhvy4gm4jgeza4vus8vpxgrwc90n8rhxe</a>
+          <a href="./add#qq4kp3w3yhhvy4gm4jgeza4vus8vpxgrwc90n8rhxe">https://read.bch.sx/add#qq4kp3w3yhhvy4gm4jgeza4vus8vpxgrwc90n8rhxe</a>
         </div>
       </div>
       <div class='wallets'>
@@ -87,8 +87,8 @@
   </script>
   <script id='fund-template' type="text/x-handlebars-template">
     <div class='info-content'>
-      <div class='permalink'><i class='fas fa-link'></i>&nbsp;Add <input type='url' value="https://read.cash/add#{{addr}}"></div>
-      <div class='permalink'><i class='fas fa-link'></i>&nbsp;Share <input type='url' value="https://read.cash/share#{{addr}}"></div>
+      <div class='permalink'><i class='fas fa-link'></i>&nbsp;Add <input type='url' value="https://read.bch.sx/add#{{addr}}"></div>
+      <div class='permalink'><i class='fas fa-link'></i>&nbsp;Share <input type='url' value="https://read.bch.sx/share#{{addr}}"></div>
       <div>
         <div>cash address:
           <a class='addr' href='{{host}}/address/bitcoincash:{{addr}}' target="_blank">
@@ -118,7 +118,7 @@
 <body class='dark'>
   <div class='container'>
     <nav class="navbar">
-      <a class="navbar-brand" href="./">read.cash</a>
+      <a class="navbar-brand" href="./">read.bch.sx</a>
       <span>
         <a href='#' id='settings'></a>
       </span>
